Test Org - Speridian/src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Line_Item_status__c</fullName>
        <label>Line Item status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Predefined_Packages__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predefined Packages</label>
        <referenceTo>BA_Product_Flat__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_BusinessSegment__c</fullName>
        <label>Business Segment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_MonthlyRate__c</fullName>
        <label>Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_RatingMethodology__c</fullName>
        <label>Rating Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Average Enrollee Amount</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Member Level Rating</fullName>
                </value>
                <value>
                    <fullName>Age-Banded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>